V1.9.2b - Fixed alternative text for R&D logo. Fixed container padding on mobile devices.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -27,3 +27,9 @@ body {
 .icon:not(:only-child) {
 	margin-right: 5px;
 }
+
+@media screen and (max-width: 500px) {
+	.container.is-fluid {
+		padding: 20px 15px;
+	}
+}
